Footer alignment and misspelling fixes

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -96,6 +96,7 @@ footer {
   float:left;
   position:fixed;
   bottom:50px;
+  padding-left: 15px;
 }
 
 @media print, screen and (max-width: 960px) {
